# document-intelligence-refinery

./: .env.examples  .gitignore  ARCHITECTURE.md  DOMAIN_NOTES.md  LICENSE  README.md  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/profiles/: Audit Report - 2023.json  sample.json
rubric/: extraction_rules.yaml
src/adapters/: docling_adapter.py  embedding_store.py  fact_table_store.py  mineru_adapter.py  vector_store.py
src/agents/: audit_agent.py  chunker.py  extractor.py  indexer.py  query_agent.py  semantic_chunker.py  triage.py
src/models/: audit_result.py  document_profile.py  extracted_document.py  ldu.py  page_index.py  provenance_chain.py  types.py
src/pipelines/: run_build_vector_index.py  run_chunking.py  run_extraction_batch.py  run_layout_extraction.py  run_page_index.py  run_query_agent_semantic.py  run_refinery_pipeline.py  run_triage_batch.py  run_vision_extraction.py
src/strategies/: base_extractor.py  fast_text_extractor.py  layout_extractor.py  vision_extractor.py
src/utils/: fact_extractor.py  language.py  ldu_loader.py  ledger.py  page_index_lookup.py  pdf_stats.py
tests/: conftest.py  test_fast_text_extractor.py  test_layout_extractor.py  test_triage.py  test_vision_extractor.py
