[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langdetect>=1.0.9",
    "langgraph>=1.0.10",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]
