[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "langdetect>=1.0.9",
    "langgraph>=1.0.10",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.10",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
]

[tool.uv.sources]
docling = { git = "https://github.com/DS4SD/docling.git" }
